--- a/5871.tex
+++ b/5871.tex
@@ -70,7 +70,7 @@
 %\thispagestyle{empty}
 % or
 \pagenumbering{gobble}
-\AdvanceDate[-1] % печатаю в субботу а нужна пятница
+%\AdvanceDate[-1] % печатаю в субботу а нужна пятница
 \begin{center}\today\end{center}
 \vspace*{1\baselineskip}
 
@@ -80,7 +80,7 @@
 %\hspace{-3cm}
 	\begin{tabular}{p{7pt}|l|p{6pt}p{6pt}p{6pt}p{6pt}p{6pt}p{6pt}p{6pt}p{6pt}p{6pt}p{6pt}p{6pt}p{6pt}p{6pt}p{6pt}p{6pt}p{6pt}p{6pt}p{6pt}p{6pt}p{6pt}p{6pt}p{6pt}p{6pt}p{6pt}}% @{}}
 %\multicolumn{25}{c}{Гр  работ студентами 8871 группы} \\ 
-\multicolumn{6}{c}{Ведомость посещения занятий по микроконтроллерам студентами 5871 группы} \\
+\multicolumn{8}{c}{Ведомость посещения занятий по микроконтроллерам студентами 5871 группы} \\
 \toprule
 %&&&&&\\
 &&&&&\\
@@ -114,18 +114,18 @@
 %&\rotatebox{90}{\rlap{\small 19 декабря (лаб.)}}
 \\
 \midrule
-		1\,&Громыко Алексей Дмитриевич	     \ok\ok&2  &\\
-		2\,&Мягков Никита Алексеевич        \ok\ok&$3-$&\\		
-		3\,&Смиренский Владислав Сергеевич  \ok\ok&$3+$&\\
-		4\,&Козлов Андрей Александрович     \ok\ok&$2$&\\
-		5\,&Кондратьев Сергей Андреевич     \ok\ok&$2$&\\
-		6\,&Романов Тимофей Викторович      \ok\ok&$2$&\\
-		7\,&Богданов Никита Александрович   \ok\no&\\
-		8\,&Солиев Пайрав                   \ok\ok\OK&\\
-		9\,&Дубенский Анатолий Сергеевич    \ok\ok&$2$&\\
+		1\,&Громыко Алексей Дмитриевич	     \ok\ok&2  \ok&\\
+		2\,&Мягков Никита Алексеевич        \ok\ok&$3-$\ok&\\		
+		3\,&Смиренский Владислав Сергеевич  \ok\ok&$3+$\ok&\\
+		4\,&Козлов Андрей Александрович     \ok\ok&$2$ \ok&\\
+		5\,&Кондратьев Сергей Андреевич     \ok\ok&$2$ \ok&\\
+		6\,&Романов Тимофей Викторович      \ok\ok&$2$ \ok&\\
+		7\,&Богданов Никита Александрович   \ok\no&$2$ \ok&\\
+		8\,&Солиев Пайрав                   \ok\ok\OK  \no&\\
+		9\,&Дубенский Анатолий Сергеевич    \ok\ok&$2$ \ok&\\
 \midrule
-		10\,&Петропавловских Иван Андреевич  \ok\ok&$2$&\\
-		11\,&Илларионов Глеб Юрьевич         \ok\ok&$2$&\\
+		10\,&Петропавловских Иван Андреевич  \ok\ok&$2$\ok&\\
+		11\,&Илларионов Глеб Юрьевич         \ok\ok&$2$\ok&\\
 \bottomrule
 \end{tabular} 
 \end{document}
