--- a/5871.tex
+++ b/5871.tex
@@ -63,6 +63,8 @@
 \newcommand*\dH{&{\small\ding{48}$\!\!^8$}} % защита, defend
 \newcommand*\gh{&{\small\ding{48}$\!\!^7_8$}} % защита, defend
 \newcommand*\fh{&{\small\ding{48}$\!\!^7_{89}$}} % защита, defend
+\newcommand\PM{&$\pm$}
+\newcommand\MP{&$\mp$}
 \newcommand*\Skip{\noindent\rule{0.3cm}{0.9pt}}
 
 
@@ -91,9 +93,9 @@
 &&&&&\\
 &&\rotatebox{90}{\rlap{\small 17 сентября (лек.)}}
 &\rotatebox{90}{\rlap{\small 20 сентября (прак.)}}
-&\rotatebox{90}{\rlap{\small 20 сентября (оценки)}}
+&\rotatebox{90}{\rlap{\small 20 сентября /оценки}}
 &\rotatebox{90}{\rlap{\small 4 октября (прак.)}}
-%&\rotatebox{90}{\rlap{\small 18 сентября (прак.)}}
+&\rotatebox{90}{\rlap{\small 15 октября /оценки}}
 %&\rotatebox{90}{\rlap{\small 13 сентября (прак.)}}
 %&\rotatebox{90}{\rlap{\small 16 сентября (лаб.)}}
 %&\rotatebox{90}{\rlap{\small 19 сентября (лек.)}}
@@ -114,18 +116,18 @@
 %&\rotatebox{90}{\rlap{\small 19 декабря (лаб.)}}
 \\
 \midrule
-		1\,&Громыко Алексей Дмитриевич	     \ok\ok&2  \ok&\\
-		2\,&Мягков Никита Алексеевич        \ok\ok&$3-$\ok&\\		
-		3\,&Смиренский Владислав Сергеевич  \ok\ok&$3+$\ok&\\
-		4\,&Козлов Андрей Александрович     \ok\ok&$2$ \ok&\\
-		5\,&Кондратьев Сергей Андреевич     \ok\ok&$2$ \ok&\\
-		6\,&Романов Тимофей Викторович      \ok\ok&$2$ \ok&\\
-		7\,&Богданов Никита Александрович   \ok\no&$2$ \ok&\\
-		8\,&Солиев Пайрав                   \ok\ok\OK  \no&\\
-		9\,&Дубенский Анатолий Сергеевич    \ok\ok&$2$ \ok&\\
+		1\,&Громыко Алексей Дмитриевич	     \ok\ok&2   \ok&\no\\
+		2\,&Мягков Никита Алексеевич         \ok\ok&$3-$\ok&2 \\		
+		3\,&Смиренский Владислав Сергеевич   \ok\ok&$3+$\ok\no\\
+		4\,&Козлов Андрей Александрович      \ok\ok&$2$ \ok\MP\\
+		5\,&Кондратьев Сергей Андреевич      \ok\ok&$2$ \ok\MP\\
+		6\,&Романов Тимофей Викторович       \ok\ok&$2$ \ok&2 \\
+		7\,&Богданов Никита Александрович    \ok\no&$2$ \ok\no\\
+		8\,&Солиев Пайрав                    \ok\ok\OK  \no\ok\\
+		9\,&Дубенский Анатолий Сергеевич     \ok\ok&$2$ \ok\no\\
 \midrule
-		10\,&Петропавловских Иван Андреевич  \ok\ok&$2$\ok&\\
-		11\,&Илларионов Глеб Юрьевич         \ok\ok&$2$\ok&\\
+		10\,&Петропавловских Иван Андреевич  \ok\ok&$2$ \ok&2 \\
+		11\,&Илларионов Глеб Юрьевич         \ok\ok&$2$ \ok\PM\\
 \bottomrule
 \end{tabular} 
 \end{document}
