оценки за практическую №3

--- a/5871.tex
+++ b/5871.tex
@@ -96,7 +96,7 @@
 &\rotatebox{90}{\rlap{\small 20 сентября /оценки}}
 &\rotatebox{90}{\rlap{\small 4 октября (прак.)}}
 &\rotatebox{90}{\rlap{\small 15 октября /оценки}}
-%&\rotatebox{90}{\rlap{\small 13 сентября (прак.)}}
+&\rotatebox{90}{\rlap{\small 18 октября /оценки}}
 %&\rotatebox{90}{\rlap{\small 16 сентября (лаб.)}}
 %&\rotatebox{90}{\rlap{\small 19 сентября (лек.)}}
 %&\rotatebox{90}{\rlap{\small 25 сентября (лаб.)}}
@@ -116,18 +116,18 @@
 %&\rotatebox{90}{\rlap{\small 19 декабря (лаб.)}}
 \\
 \midrule
-		1\,&Громыко Алексей Дмитриевич	     \ok\ok&2   \ok&\no\\
-		2\,&Мягков Никита Алексеевич         \ok\ok&$3-$\ok&2 \\		
-		3\,&Смиренский Владислав Сергеевич   \ok\ok&$3+$\ok\no\\
-		4\,&Козлов Андрей Александрович      \ok\ok&$2$ \ok\MP\\
-		5\,&Кондратьев Сергей Андреевич      \ok\ok&$2$ \ok\MP\\
-		6\,&Романов Тимофей Викторович       \ok\ok&$2$ \ok&2 \\
-		7\,&Богданов Никита Александрович    \ok\no&$2$ \ok\no\\
-		8\,&Солиев Пайрав                    \ok\ok\OK  \no\ok\\
-		9\,&Дубенский Анатолий Сергеевич     \ok\ok&$2$ \ok\no\\
+		1\,&Громыко Алексей Дмитриевич	     \ok\ok&2   \ok&\no3-\\
+		2\,&Мягков Никита Алексеевич         \ok\ok&$3-$\ok&2  &4\\		
+		3\,&Смиренский Владислав Сергеевич   \ok\ok&$3+$\ok\no &4\\
+		4\,&Козлов Андрей Александрович      \ok\ok&$2$ \ok\MP &3\\
+		5\,&Кондратьев Сергей Андреевич      \ok\ok&$2$ \ok\MP &2\\
+		6\,&Романов Тимофей Викторович       \ok\ok&$2$ \ok&2  &3\\
+		7\,&Богданов Никита Александрович    \ok\no&$2$ \ok\no &2\\
+		8\,&Солиев Пайрав                    \ok\ok\OK  \no\ok &2\\
+		9\,&Дубенский Анатолий Сергеевич     \ok\ok&$2$ \ok\no &4\\
 \midrule
-		10\,&Петропавловских Иван Андреевич  \ok\ok&$2$ \ok&2 \\
-		11\,&Илларионов Глеб Юрьевич         \ok\ok&$2$ \ok\PM\\
+		10\,&Петропавловских Иван Андреевич  \ok\ok&$2$ \ok&2  &3\\
+		11\,&Илларионов Глеб Юрьевич         \ok\ok&$2$ \ok\PM &3\\
 \bottomrule
 \end{tabular} 
 \end{document}
