--- a/5871.tex
+++ b/5871.tex
@@ -82,7 +82,7 @@
 %\hspace{-3cm}
 	\begin{tabular}{p{7pt}|l|p{6pt}p{6pt}p{6pt}p{6pt}p{6pt}p{6pt}p{6pt}p{6pt}p{6pt}p{6pt}p{6pt}p{6pt}p{6pt}p{6pt}p{6pt}p{6pt}p{6pt}p{6pt}p{6pt}p{6pt}p{6pt}p{6pt}p{6pt}p{6pt}}% @{}}
 %\multicolumn{25}{c}{Гр  работ студентами 8871 группы} \\ 
-\multicolumn{8}{c}{Ведомость посещения занятий по микроконтроллерам студентами 5871 группы} \\
+\multicolumn{10}{c}{Ведомость посещения занятий по микроконтроллерам студентами 5871 группы} \\
 \toprule
 %&&&&&\\
 &&&&&\\
@@ -97,7 +97,7 @@
 &\rotatebox{90}{\rlap{\small 4 октября (прак.)}}
 &\rotatebox{90}{\rlap{\small 15 октября /оценки}}
 &\rotatebox{90}{\rlap{\small 18 октября /оценки}}
-%&\rotatebox{90}{\rlap{\small 16 сентября (лаб.)}}
+&\rotatebox{90}{\rlap{\small 29 октября (прак.)}}
 %&\rotatebox{90}{\rlap{\small 19 сентября (лек.)}}
 %&\rotatebox{90}{\rlap{\small 25 сентября (лаб.)}}
 %&\rotatebox{90}{\rlap{\small 26 сентября (лек.)}} 
@@ -116,18 +116,18 @@
 %&\rotatebox{90}{\rlap{\small 19 декабря (лаб.)}}
 \\
 \midrule
-		1\,&Громыко Алексей Дмитриевич	     \ok\ok&2   \ok&\no3-\\
-		2\,&Мягков Никита Алексеевич         \ok\ok&$3-$\ok&2  &4\\		
-		3\,&Смиренский Владислав Сергеевич   \ok\ok&$3+$\ok\no &4\\
-		4\,&Козлов Андрей Александрович      \ok\ok&$2$ \ok\MP &3\\
-		5\,&Кондратьев Сергей Андреевич      \ok\ok&$2$ \ok\MP &2\\
-		6\,&Романов Тимофей Викторович       \ok\ok&$2$ \ok&2  &3\\
-		7\,&Богданов Никита Александрович    \ok\no&$2$ \ok\no &2\\
-		8\,&Солиев Пайрав                    \ok\ok\OK  \no\ok &2\\
-		9\,&Дубенский Анатолий Сергеевич     \ok\ok&$2$ \ok\no &4\\
+		1\,&Громыко Алексей Дмитриевич	     \ok\ok&2   \ok\no&3-\no\\
+		2\,&Мягков Никита Алексеевич         \ok\ok&$3-$\ok&2  &4\no\\		
+		3\,&Смиренский Владислав Сергеевич   \ok\ok&$3+$\ok\no &4\no\\
+		4\,&Козлов Андрей Александрович      \ok\ok&$2$ \ok\MP &3&$\cdot$\\
+		5\,&Кондратьев Сергей Андреевич      \ok\ok&$2$ \ok\MP &2\no\\
+		6\,&Романов Тимофей Викторович       \ok\ok&$2$ \ok&2  &3\no\\
+		7\,&Богданов Никита Александрович    \ok\no&$2$ \ok\no &2\no\\
+		8\,&Солиев Пайрав                    \ok\ok\OK  \no\ok &2&пр3\\
+		9\,&Дубенский Анатолий Сергеевич     \ok\ok&$2$ \ok\no &4\no\\
 \midrule
-		10\,&Петропавловских Иван Андреевич  \ok\ok&$2$ \ok&2  &3\\
-		11\,&Илларионов Глеб Юрьевич         \ok\ok&$2$ \ok\PM &3\\
+		10\,&Петропавловских Иван Андреевич  \ok\ok&$2$ \ok&2  &3\no\\
+		11\,&Илларионов Глеб Юрьевич         \ok\ok&$2$ \ok\PM &3\no\\
 \bottomrule
 \end{tabular} 
 \end{document}
