Ведомость до 10 декабря

--- a/5871.tex
+++ b/5871.tex
@@ -80,11 +80,17 @@
 %\skippage 
 %\begin{table} \centering 
 %\hspace{-3cm}
-	\begin{tabular}{p{7pt}|l|p{6pt}p{6pt}p{6pt}p{6pt}p{6pt}p{6pt}p{6pt}p{6pt}p{6pt}p{6pt}p{6pt}p{6pt}p{6pt}p{6pt}p{6pt}p{6pt}p{6pt}p{6pt}p{6pt}p{6pt}p{6pt}p{6pt}p{6pt}p{6pt}}% @{}}
+	\begin{tabular}{p{7pt}|l|p{6pt}p{6pt}p{6pt}p{6pt}p{6pt}p{6pt}p{16pt}p{6pt}p{6pt}p{6pt}p{6pt}p{6pt}p{6pt}p{6pt}p{6pt}p{6pt}p{6pt}p{6pt}p{6pt}p{6pt}p{6pt}p{6pt}p{6pt}p{6pt}}% @{}}
 %\multicolumn{25}{c}{Гр  работ студентами 8871 группы} \\ 
-\multicolumn{10}{c}{Ведомость посещения занятий по микроконтроллерам студентами 5871 группы} \\
+\multicolumn{14}{c}{Ведомость посещения занятий по микроконтроллерам студентами 5871 группы} \\
 \toprule
 %&&&&&\\
+&&&&&\\
+&&&&&\\
+&&&&&\\
+&&&&&\\
+&&&&&\\
+&&&&&\\
 &&&&&\\
 &&&&&\\
 &&&&&\\
@@ -96,12 +102,12 @@
 &\rotatebox{90}{\rlap{\small 20 сентября /оценки}}
 &\rotatebox{90}{\rlap{\small 4 октября (прак.)}}
 &\rotatebox{90}{\rlap{\small 15 октября /оценки}}
-&\rotatebox{90}{\rlap{\small 18 октября /оценки}}
+&\rotatebox{90}{\rlap{\small 18 октября оценки за работу в классе}}
 &\rotatebox{90}{\rlap{\small 29 октября (прак.)}}
-%&\rotatebox{90}{\rlap{\small 19 сентября (лек.)}}
-%&\rotatebox{90}{\rlap{\small 25 сентября (лаб.)}}
-%&\rotatebox{90}{\rlap{\small 26 сентября (лек.)}} 
-%&\rotatebox{90}{\rlap{\small 23 октября (лаб.)}}
+		&\rotatebox{90}{\rlap{\small 12 ноября (разговор с Зав.кафедрой)}}
+&\rotatebox{90}{\rlap{\small 15 ноября (прак.)}}
+&\rotatebox{90}{\rlap{\small 26 ноября (прак.)}} 
+&\rotatebox{90}{\rlap{\small 29 ноября (прак.)}}
 %&\rotatebox{90}{\rlap{\small 24 октября (лек.)}}
 %&\rotatebox{90}{\rlap{\small 31 октября (лек.)}}
 %&\rotatebox{90}{\rlap{\small 6 ноября (лаб.)}}
@@ -116,18 +122,18 @@
 %&\rotatebox{90}{\rlap{\small 19 декабря (лаб.)}}
 \\
 \midrule
-		1\,&Громыко Алексей Дмитриевич	     \ok\ok&2   \ok\no&3-\no\\
-		2\,&Мягков Никита Алексеевич         \ok\ok&$3-$\ok&2  &4\no\\		
-		3\,&Смиренский Владислав Сергеевич   \ok\ok&$3+$\ok\no &4\no\\
-		4\,&Козлов Андрей Александрович      \ok\ok&$2$ \ok\MP &3&$\cdot$\\
-		5\,&Кондратьев Сергей Андреевич      \ok\ok&$2$ \ok\MP &2\no\\
-		6\,&Романов Тимофей Викторович       \ok\ok&$2$ \ok&2  &3\no\\
-		7\,&Богданов Никита Александрович    \ok\no&$2$ \ok\no &2\no\\
-		8\,&Солиев Пайрав                    \ok\ok\OK  \no\ok &2&пр3\\
-		9\,&Дубенский Анатолий Сергеевич     \ok\ok&$2$ \ok\no &4\no\\
+		1\,&Громыко Алексей Дмитриевич	     \ok\ok&2   \ok\no&3-\no     &3- \ok\ok\ok\\
+		2\,&Мягков Никита Алексеевич         \ok\ok&$3-$\ok&2  &4\no     &3- \ok\no\ok\\		
+		3\,&Смиренский Владислав Сергеевич   \ok\ok&$3+$\ok\no &4\no     &3+ \ok\ok\ok\\
+		4\,&Козлов Андрей Александрович      \ok\ok&$2$ \ok\MP &3&$\cdot$&3  \ok\ok\no\\
+		5\,&Кондратьев Сергей Андреевич      \ok\ok&$2$ \ok\MP &2\no     &3  \ok\ok\ok\\
+		6\,&Романов Тимофей Викторович       \ok\ok&$2$ \ok&2  &3\no     &3- \ok\ok\ok\\
+		7\,&Богданов Никита Александрович    \ok\no&$2$ \ok\no &2\no     &3--\ok\ok\ok\\
+		8\,&Солиев Пайрав                    \ok\ok\OK  \no\ok &2&пр3.$\;$&4 \ok\ok\ok\\
+		9\,&Дубенский Анатолий Сергеевич     \ok\ok&$2$ \ok\no &4\no     &3- \ok\ok\ok\\
 \midrule
-		10\,&Петропавловских Иван Андреевич  \ok\ok&$2$ \ok&2  &3\no\\
-		11\,&Илларионов Глеб Юрьевич         \ok\ok&$2$ \ok\PM &3\no\\
+		10\,&Петропавловских Иван Андреевич  \ok\ok&$2$ \ok&2  &3\no     &3- \ok\ok\ok\\
+		11\,&Илларионов Глеб Юрьевич         \ok\ok&$2$ \ok\PM &3\no     &3- \ok\ok\ok\\
 \bottomrule
 \end{tabular} 
 \end{document}
