--- a/5871.tex
+++ b/5871.tex
@@ -80,9 +80,9 @@
 %\skippage 
 %\begin{table} \centering 
 %\hspace{-3cm}
-	\begin{tabular}{p{7pt}|l|p{6pt}p{6pt}p{6pt}p{6pt}p{6pt}p{6pt}p{16pt}p{6pt}p{6pt}p{6pt}p{6pt}p{6pt}p{6pt}p{6pt}p{6pt}p{6pt}p{6pt}p{6pt}p{6pt}p{6pt}p{6pt}p{6pt}p{6pt}p{6pt}}% @{}}
+	\begin{tabular}{p{7pt}|l|p{6pt}p{6pt}p{6pt}p{6pt}p{6pt}p{6pt}p{16pt}p{6pt}p{6pt}p{16pt}p{6pt}p{6pt}p{6pt}p{6pt}p{6pt}p{6pt}p{6pt}p{6pt}p{6pt}p{6pt}p{6pt}p{6pt}p{6pt}p{6pt}}% @{}}
 %\multicolumn{25}{c}{Гр  работ студентами 8871 группы} \\ 
-\multicolumn{14}{c}{Ведомость посещения занятий по микроконтроллерам студентами 5871 группы} \\
+\multicolumn{16}{c}{Ведомость посещения занятий по микроконтроллерам студентами 5871 группы} \\
 \toprule
 %&&&&&\\
 &&&&&\\
@@ -104,11 +104,11 @@
 &\rotatebox{90}{\rlap{\small 15 октября /оценки}}
 &\rotatebox{90}{\rlap{\small 18 октября оценки за работу в классе}}
 &\rotatebox{90}{\rlap{\small 29 октября (прак.)}}
-		&\rotatebox{90}{\rlap{\small 12 ноября (разговор с Зав.кафедрой)}}
+&\rotatebox{90}{\rlap{\small 12 ноября (разговор с Зав.кафедрой)}}
 &\rotatebox{90}{\rlap{\small 15 ноября (прак.)}}
 &\rotatebox{90}{\rlap{\small 26 ноября (прак.)}} 
 &\rotatebox{90}{\rlap{\small 29 ноября (прак.)}}
-%&\rotatebox{90}{\rlap{\small 24 октября (лек.)}}
+&\rotatebox{90}{\rlap{\small 10 декабря оценки за работу в классе}}
 %&\rotatebox{90}{\rlap{\small 31 октября (лек.)}}
 %&\rotatebox{90}{\rlap{\small 6 ноября (лаб.)}}
 %&\rotatebox{90}{\rlap{\small 7 ноября (прак.)}} 
@@ -122,18 +122,18 @@
 %&\rotatebox{90}{\rlap{\small 19 декабря (лаб.)}}
 \\
 \midrule
-		1\,&Громыко Алексей Дмитриевич	     \ok\ok&2   \ok\no&3-\no     &3- \ok\ok\ok\\
-		2\,&Мягков Никита Алексеевич         \ok\ok&$3-$\ok&2  &4\no     &3- \ok\no\ok\\		
-		3\,&Смиренский Владислав Сергеевич   \ok\ok&$3+$\ok\no &4\no     &3+ \ok\ok\ok\\
-		4\,&Козлов Андрей Александрович      \ok\ok&$2$ \ok\MP &3&$\cdot$&3  \ok\ok\no\\
-		5\,&Кондратьев Сергей Андреевич      \ok\ok&$2$ \ok\MP &2\no     &3  \ok\ok\ok\\
-		6\,&Романов Тимофей Викторович       \ok\ok&$2$ \ok&2  &3\no     &3- \ok\ok\ok\\
-		7\,&Богданов Никита Александрович    \ok\no&$2$ \ok\no &2\no     &3--\ok\ok\ok\\
-		8\,&Солиев Пайрав                    \ok\ok\OK  \no\ok &2&пр3.$\;$&4 \ok\ok\ok\\
-		9\,&Дубенский Анатолий Сергеевич     \ok\ok&$2$ \ok\no &4\no     &3- \ok\ok\ok\\
+		1\,&Громыко Алексей Дмитриевич	     \ok\ok&2   \ok\no&3-\no     &3- \ok&пр1.\ok&0           & \\
+		2\,&Мягков Никита Алексеевич         \ok\ok&$3-$\ok&2  &4\no     &3- \ok\no  \ok&0.          & \\		
+		3\,&Смиренский Владислав Сергеевич   \ok\ok&$3+$\ok\no &4\no     &3+ \ok\ok  \ok&$\frac{1}{8}$& \\
+		4\,&Козлов Андрей Александрович      \ok\ok&$2$ \ok\MP &3&$\cdot$&3  \ok\ok  \no&$\frac{1}{3}$& \\
+		5\,&Кондратьев Сергей Андреевич      \ok\ok&$2$ \ok\MP &2\no     &3  \ok\ok  \ok&$\frac{2}{3}$& \\
+		6\,&Романов Тимофей Викторович       \ok\ok&$2$ \ok&2  &3\no     &3- \ok\ok  \ok&0            & \\
+		7\,&Богданов Никита Александрович    \ok\no&$2$ \ok\no &2\no     &3--\ok\ok  \ok&0            & \\
+		8\,&Солиев Пайрав                    \ok\ok\OK  \no\ok &2&пр3.$\;$&4 \ok\ok  \ok\no           & \\
+		9\,&Дубенский Анатолий Сергеевич     \ok\ok&$2$ \ok\no &4\no     &3- \ok\ok  \ok&0.           & \\
 \midrule
-		10\,&Петропавловских Иван Андреевич  \ok\ok&$2$ \ok&2  &3\no     &3- \ok\ok\ok\\
-		11\,&Илларионов Глеб Юрьевич         \ok\ok&$2$ \ok\PM &3\no     &3- \ok\ok\ok\\
+		10\,&Петропавловских Иван Андреевич  \ok\ok&$2$ \ok&2  &3\no     &3- \ok\ok  \ok&0.           & \\
+		11\,&Илларионов Глеб Юрьевич         \ok\ok&$2$ \ok\PM &3\no     &3- \ok\ok  \ok&0            & \\
 \bottomrule
 \end{tabular} 
 \end{document}
