--- a/lectures/kontravariant.tex
+++ b/lectures/kontravariant.tex
@@ -80,6 +80,10 @@ $$
 $$
 \vec{S}_2 = -\frac{m_3 + (m_2 + m_3)}{2} \vec{e}_c
 $$ 
+%причем 
+$$
+m_1+m_2+m_3 = 1
+$$
 Опустим перпендикуляр с точки $S_2$ на горизонтальную ось, тогда:
 $$
 \frac{\left(S_3 - \frac{S_2}{2}\right)}{\sqrt{3}/2} = m_2\frac{\sqrt{3}}{2} \;\Rightarrow\; S_3 - \frac{S_2}{2} = \frac{3}{4}m_2 
@@ -87,8 +91,19 @@ $$
 аналогично:
 $$
 \frac{\left(S_2 - \frac{S_3}{2}\right)}{\sqrt{3}/2} = m_3\frac{\sqrt{3}}{2} \;\Rightarrow\; S_2 - \frac{S_3}{2} = \frac{3}{4}m_3 
-$$
+$$ 
 
+Выразим $m_k$ через $S_k$: 
+\begin{equation}
+        \left\{
+        \begin{array}{lcl}
+                m_2 &=& {\displaystyle \frac{4}{3}\left(S_3 - \frac{S_2}{2}\right)} \\
+                m_3 &=& {\displaystyle \frac{4}{3}\left(S_2 - \frac{S_3}{2}\right)} \\
+                m_1 &=& {\displaystyle 1 - \frac{2}{3}\left(S_2 + S_3\right)} \\
+%                1 &=& m_1+m_2+m_3 \\
+        \end{array}
+        \right.
+\end{equation}
 
 
 
