--- a/lectures/kontravariant.tex
+++ b/lectures/kontravariant.tex
@@ -8,7 +8,7 @@
 % Конец преамбулы
 \begin{document}
 \section{Контравариантные координаты -- управление} 
-\begin{tikzpicture}
+\begin{tikzpicture}[scale=0.8]
 \newcommand{\D}{8}
 \newcommand{\vx}{5}
 \newcommand{\vy}{2}
