--- a/lectures/timing.tex
+++ b/lectures/timing.tex
@@ -49,9 +49,9 @@
 	\draw[thin,yellow] ({2*\D+\DD},{\D+\DD/6*1.3}) -- ({2*\D+2*\DD},{\D+\DD/6*1.3});
 	\draw[thin,green] ({2*\D+\DD},{\D+\DD/2}) -- ({2*\D+2*\DD},{\D+\DD/2});
         \draw[thin,red] ({2*\D+\DD},{\D+2*\DD/3}) -- ({2*\D+2*\DD},{\D+2*\DD/3});
-\draw[yellow, dashed]  ({2*\D + \lineL}, {\D+\DD/6*1.3}) -- ({2*\D+2*\DD},{\D+\DD/6*1.3});
-\draw[green, dashed]  ({2*\D + \lineL}, {\D+\DD/2}) -- ({2*\D+2*\DD},{\D+\DD/2});
-\draw[red, dashed]  ({2*\D + \lineL}, {\D+2*\DD/3}) -- ({2*\D+2*\DD},{\D+2*\DD/3});
+\draw[yellow, dashed]  ({2*\D + \lineL}, {\D+\DD/6*1.3}) -- ({2*\D+\DD},{\D+\DD/6*1.3});
+\draw[green, dashed]  ({2*\D + \lineL}, {\D+\DD/2}) -- ({2*\D+\DD},{\D+\DD/2});
+\draw[red, dashed]  ({2*\D + \lineL}, {\D+2*\DD/3}) -- ({2*\D+\DD},{\D+2*\DD/3});
 \draw[green] ({2*\D+\DD+\lineL},{\basem}) to[L,color=green] ({2*\D+\DD},{\basem});
 \draw[very thin,->,>=stealth'] ({2*\D+\DD},{\baset}) -- ({2*\D+\DD},{\basem});
 \draw[very thin,->,>=stealth']  ({2*\D+\DD + \lineL},{\basem}) -- ({2*\D+\DD + \lineL},{\D+2*\DD/3}); 
