--- a/lectures/laboratory.tex
+++ b/lectures/laboratory.tex
@@ -128,9 +128,9 @@
 \end{center}
 \end{figure} 
 \begin{tabular}{lll}
-	1&микроконтроллер		&200руб.\\
-	2&аппаратный программатор	&200-300руб.\\
-	3&светодиод,резистор,провода&100руб\\
+	1&микроконтроллер		&200 руб.\\
+	2&аппаратный программатор	&200-300 руб.\\
+	3&светодиод,резистор,провода&100 руб.\\
 	4&драйвер силовых ключей&в единственном экз.\\
 	5&асинхронный двигатель&в единственном экз.\\
 	6&силовой блок питания&в единственном экз.\\
@@ -203,8 +203,151 @@ $$
 \end{frame}
 
 \begin{frame}
-\frametitle{\smallконтравариантные координаты -- управление}
+\frametitle{\smallЛекция 2 контравариантные координаты -- управление}
+	\begin{tikzpicture}[scale=0.8]
+\newcommand{\D}{8}
+\newcommand{\vx}{5}
+\newcommand{\vy}{2}
+        \draw[thick] (0,0) node[below left] {{\large${\bf m_1}$}} -- ({\D},0) node[below right] {{\large${\bf m_2}$}} -- ({\D/2},{\D*sqrt(3)/2}) node[above=8] {{\large${\bf m_3}$}} -- (0,0);
+%       \draw[red,thick,->,>=stealth'] (0,0) -- ({\vx}, {\vy}) node(v) {};
+	\draw[thin] ({\vx + \vy/tan(60)},0) -- (\vx,\vy) -- ({(\vx + \vy/tan(60))/2}, {(\vx + \vy/tan(60))*sqrt(3)/2} ); % контравариантная на ось фазы C и на ось фазы А
 
+	% сам вектор 
+        \draw[red,very thick,->,>=stealth'] (0,0) -- ({\vx}, {\vy}) node(v) {};
+        \draw ({\vx}, {\vy})  node[above=0.25cm] {$O$};
+
+        % подписи внизу
+        \draw[very thin] (0,-0.1) -- (0,-1.5);
+        \draw ({\vx + \vy/tan(60)},-0.1) -- ({\vx + \vy/tan(60)},-0.8); \draw (\D,-0.1) -- (\D,-1.5);
+        \draw[very thin,<->,>=stealth'] (0,-0.5) --  ({\vx + \vy/tan(60)}, -0.5) node[midway, below] {$m_2+m_3$};
+        \draw[very thin,<->,>=stealth']  ({\vx + \vy/tan(60)}, -0.4) -- (\D, -0.4) node[midway, below] {$m_1$};
+
+\only<2,3>{        
+        \draw[thin] ({\vy/tan(60)} ,{\vy}) --  ({\vx}, {\vy}) -- ({\D - \vy/tan(60)},{\vy}) node[midway, below right=-0.05cm] {$m_1$};
+        \draw[thin] ({\vx-\vy/tan(60)},0 ) -- (\vx,\vy); 
+        \draw[thin] ({\D/2 + (\vx-\vy/tan(60))/2}, {\D*sqrt(3)/2 - (\vx-\vy/tan(60))*sqrt(3)/2}) -- (\vx,\vy) node[midway, above=0.25cm] {$m_1$}; % контравариантная на ось фазы B || [1-3]
+
+        \draw[very thin]  ({\vx - \vy/tan(60)}, -1.0) -- ({\vx - \vy/tan(60)}, -1.5);
+        \draw[very thin,<->,>=stealth']  (0,-1.2) --  ({\vx - \vy/tan(60)}, -1.2) node[midway, below] {$m_2$};
+        \draw[very thin,<->,>=stealth'] ({\vx - \vy/tan(60)}, -1.3) -- (\D, -1.3) node[midway, below] {$m_1+m_3$};
+ 
+        % подписи справа
+        \draw[very thin] ({\D + 0.1*sqrt(3)/2}, {0 + 0.1/2}) -- ({\D + 0.8*sqrt(3)/2}, {0 + 0.8/2});
+        \draw[very thin] ({\D - \vy/tan(60) + 0.1*sqrt(3)/2} ,{\vy + 0.1/2}) -- ({\D - \vy/tan(60) + 0.8*sqrt(3)/2},{\vy + 0.8/2});
+        \draw[very thin,<->,>=stealth'] ({\D + 0.5*sqrt(3)/2}, {0 + 0.5/2}) -- ({\D - \vy/tan(60) + 0.5*sqrt(3)/2} ,{\vy + 0.5/2}) node[midway, above right] {$m_3$};
+        \draw[very thin] ({\D/2 + (\vx-\vy/tan(60))/2 + 0.1*sqrt(3)/2}, {\D*sqrt(3)/2 - (\vx-\vy/tan(60))*sqrt(3)/2 + 0.1/2}) --
+                          ({\D/2 + (\vx-\vy/tan(60))/2 + 0.8*sqrt(3)/2}, {\D*sqrt(3)/2 - (\vx-\vy/tan(60))*sqrt(3)/2 + 0.8/2});
+        \draw[very thin,<->,>=stealth'] ({\D - \vy/tan(60) + 0.65*sqrt(3)/2} ,{\vy + 0.65/2}) --
+                                        ({\D/2 + (\vx-\vy/tan(60))/2 + 0.65*sqrt(3)/2}, {\D*sqrt(3)/2 - (\vx-\vy/tan(60))*sqrt(3)/2 + 0.65/2}) node[midway, above right] {$m_1$};
+        \draw[very thin] ({\D/2 + 0.1*sqrt(3)/2},{\D*sqrt(3)/2 + 0.1/2}) -- ({\D/2 + 0.8*sqrt(3)/2},{\D*sqrt(3)/2 + 0.8/2});
+        \draw[very thin,<->,>=stealth'] ({\D/2 + 0.55*sqrt(3)/2} ,{\D*sqrt(3)/2 + 0.55/2}) --
+                                        ({\D/2 + (\vx-\vy/tan(60))/2 + 0.55*sqrt(3)/2}, {\D*sqrt(3)/2 - (\vx-\vy/tan(60))*sqrt(3)/2 + 0.55/2}) node[midway, above right] {$m_2$};
+        %подписи слева
+        \draw[very thin] ({0 - 0.1*sqrt(3)/2}, {0 + 0.1/2}) -- ({0 - 0.8*sqrt(3)/2}, {0 + 0.8/2});
+        \draw[very thin] ({\vy/tan(60) - 0.1*sqrt(3)/2} ,{\vy + 0.1/2}) -- ({\vy/tan(60) - 0.8*sqrt(3)/2} ,{\vy + 0.8/2});
+        \draw[very thin,<->,>=stealth'] ({0 - 0.75*sqrt(3)/2}, {0 + 0.75/2}) -- ({\vy/tan(60) - 0.75*sqrt(3)/2} ,{\vy + 0.75/2}) node[midway, above left] {$m_3$};
+        \draw[very thin] ({(\vx + \vy/tan(60))/2 - 0.1*sqrt(3)/2}, {(\vx + \vy/tan(60))*sqrt(3)/2 + 0.1/2}) --
+                         ({(\vx + \vy/tan(60))/2 - 0.8*sqrt(3)/2}, {(\vx + \vy/tan(60))*sqrt(3)/2 + 0.8/2});
+        \draw[very thin,<->,>=stealth'] ({\vy/tan(60) - 0.7*sqrt(3)/2} ,{\vy + 0.7/2}) --
+                                        ({(\vx + \vy/tan(60))/2 - 0.7*sqrt(3)/2}, {(\vx + \vy/tan(60))*sqrt(3)/2 + 0.7/2}) node[midway, above left] {$m_2$};
+        \draw[very thin] ({\D/2 - 0.1*sqrt(3)/2},{\D*sqrt(3)/2 + 0.1/2}) --  ({\D/2 - 0.8*sqrt(3)/2},{\D*sqrt(3)/2 + 0.8/2});
+        \draw[very thin,<->,>=stealth']  ({(\vx + \vy/tan(60))/2 - 0.5*sqrt(3)/2}, {(\vx + \vy/tan(60))*sqrt(3)/2 + 0.5/2}) --
+                                         ({\D/2 - 0.5*sqrt(3)/2},{\D*sqrt(3)/2 + 0.5/2}) node[midway, above left] {$m_1$}; 
+}
+\only<3>{
+	% вспомогательная ось B
+        \draw[ultra thin] ({-0.7*cos(-60)},{-0.7*sin(-60)}) -- ({1.2*cos(-60)},{1.2*sin(-60)});
+        \newcommand{\bb}{(\vx*cos(-60) + \vy*sin(-60))}
+        \draw[dashed, thin] ({\vx}, {\vy})  -- ({\bb*cos(-60)},{\bb*sin(-60)}) node[below left=-0.18cm] {$S_1$};  % перпендикуляр на ось фазы B
+
+        \newcommand{\xx}{(\vx/2+\vy*sqrt(3)/2)} % скалярное исходного вектора с осью (-С)
+        \draw[dashed, thin] ({\vx},{\vy}) --({\xx/2},{\xx*sqrt(3)/2}) node[above left=-0.1cm] {$S_2$}; % перпендикуляр на ось фазы C
+        \newcommand{\zz}{(\vx/2-\vy*sqrt(3)/2)} % скалярное исходного вектора с осью (-B) 
+        \draw[dashed, thin] ({\vx},{\vy}) -- ({\D*3/4  + \zz/2},{\D*sqrt(3)/4 - \zz*sqrt(3)/2}) ;%node[above right=-0.1cm] {$S_1$}; 
+        % в симметричном режиме можно упростить 
+        \newcommand{\sss}{(\vx-\vy/tan(60))*sqrt(3)/2}
+        \draw[ultra thin ,<-,>=stealth'] ({\xx/2 + \sss*cos(-30)/2 + 0.1*cos(40)}, {(\xx*sqrt(3)/2 + \sss*sin(-30)/2 + 0.1*sin(40)}) --
+                                         ({\xx/2 + \sss*cos(-30)/2 + 4.5*cos(40)}, {(\xx*sqrt(3)/2 + \sss*sin(-30)/2 + 4.5*sin(40)}) node[above right=-0.15cm] {$m_2\frac{\sqrt{3}}{2}=\;\mid\!OS_2\!\mid$};
+        \draw[ultra thin, <-,>=stealth'] ({\vx + 0.1*cos(20)},{0.4*\vy+ 0.1*sin(20)}) --
+                                         ({\vx + 3.5*cos(20)},{0.4*\vy + 3.5*sin(20)}) node[above right=-0.15cm] {$m_3\frac{\sqrt{3}}{2}=\;\mid\!OS_3\!\mid$};
+
+        \draw[dashed, thin] ({\vx}, {\vy}) -- ({\vx},0) node[below=-0.07cm] {$S_3$}; % на ось фазы A					 
+        % опустим перпендикуляр на ось фазы A
+        \draw[dotted] ({\xx/2},{\xx*sqrt(3)/2}) -- ({\xx/2}, 0);
+        }
+\end{tikzpicture}
+\end{frame}
+
+\begin{frame}
+\frametitle{\smallПреобразование ковариантных координат в контравариантные}
+
+гладкость вектора тока.\\
+изображающий вектор есть центр тяжести \enquote{весов} дискретных состояний, возможно описание с помощью правила рычага Архимеда для весов и плечей.\\
+изображающий вектор есть векторная сумма \enquote{весов} контравариантных координат векторов.
+$$
+        \left\{
+        \begin{array}{lcl}
+                m_2 &=& {\displaystyle \frac{4}{3}\left(S_3 - \frac{S_2}{2}\right)} \\
+                m_3 &=& {\displaystyle \frac{4}{3}\left(S_2 - \frac{S_3}{2}\right)} \\
+                m_1 &=& {\displaystyle 1 - \frac{2}{3}\left(S_2 + S_3\right)} \\
+        \end{array}
+        \right.
+$$
+\end{frame}
+
+\begin{frame}
+\frametitle{\smallПеревод весов дискретных состояний ключей в расходы ШИМ}
+	\hspace{-1.7cm}
+\begin{tabular}{cc}
+\begin{minipage}[h]{0.3\linewidth}
+\begin{tikzpicture}[scale=0.3]
+\newcommand{\D}{8}
+\newcommand{\vx}{(5/8*\D)}
+\newcommand{\vy}{(2/8*\D)}
+	\draw[thick] (0,0) node[below=-0.1cm] {{$\small\begin{array}{c}\bf{m_1}\\(111)\\(000)\end{array}$}} -- ({\D},0) node[below=-0.16cm] {$\small\begin{array}{c}\bf{m_2}\\(100)\end{array}$} --
+        ({\D/2},{\D*sqrt(3)/2}) node[above] {{$m_3$} {\small$(110)$}} -- (0,0);
+        % сам вектор
+        \draw[red,very thick,->,>=stealth'] (0,0) -- ({\vx}, {\vy}) node(v) {};
+        \draw ({\vx}, {\vy}) node[above] {$U$};
+        \draw[thin, dashed] ({\D*sqrt(3)/2},0) arc(0:60:{\D*sqrt(3)/2});
+\end{tikzpicture}
+\end{minipage}
+&
+\begin{minipage}[h]{0.3\linewidth}
+\begin{tikzpicture}[scale=0.54]
+\newcommand{\D}{8.5}
+        \draw[->,>=stealth'] (0,0) -- (0,6.5);
+        \draw[->,>=stealth'] (0,1) -- (8,1); %node[right] {C};
+        \draw[->,>=stealth'] (0,3) -- (8,3); %node[right] {B};
+        \draw[->,>=stealth'] (0,5) -- (8,5); %node[right] {A};
+	\draw[->,>=stealth',thin] (0,-0.2) -- (1,-0.2) node[midway, above] {\small{$\frac{m_1}{T}$}} -- (3,-0.2)
+	node[midway, above] {\small{$\frac{m_2}{T}$}} -- (6,-0.2) node[midway, above] {\small{$\frac{m_3}{T}$}} -- (7,-0.2)
+	node[midway, above] {\small{$\frac{m_1}{T}$}} -- (8,-0.2) node[below] {$t$};
+        \draw[thin] (0,0) -- (0,-0.6) node[below] {$0$};
+	\draw[thin,dashed] (1,5) -- (1,0); \draw[thin] (1,0) -- (1,-0.6) node[below] {\small{$t_1$}};
+	\draw[thin,dashed] (3,6) -- (3,0); \draw[thin] (3,0) -- (3,-0.6) node[below] {\small{$t_2$}};
+	\draw[thin,dashed] (6,6) -- (6,0); \draw[thin] (6,0) -- (6,-0.6) node[below] {\small{$t_3$}};
+	\draw[thin,dashed] (7,6) -- (7,0); \draw[thin] (7,0) -- (7,-0.6) node[below] {\small{$T$}};
+        \draw[ultra thick,yellow] (0,5) -- (1,5) -- (1,6) -- (7,6);
+        \draw[ultra thick,green] (0,3) -- (3,3) -- (3,4) -- (7,4);
+        \draw[ultra thick,red] (0,1) -- (6,1) -- (6,2) -- (7,2);
+
+        \draw[->,>=stealth'] ({\D+0},0) -- ({\D+0},6.5);
+        \draw[->,>=stealth'] ({\D+0},1) -- ({\D+7.5},1) node[right=-0.17cm] {C};
+        \draw[->,>=stealth'] ({\D+0},3) -- ({\D+7.5},3) node[right=-0.17cm] {B};
+        \draw[->,>=stealth'] ({\D+0},5) -- ({\D+7.5},5) node[right=-0.17cm] {A};
+        \draw[thin] ({\D+0},0) -- ({\D+0},-0.6) node[below] {$0$};
+        \draw[->,>=stealth',thin] ({\D+0},-0.2) --  ({\D+8},-0.2) node[below] {$t$};
+        \draw[thin,dashed] ({\D+0.3},5) -- ({\D+0.3},0); \draw[thin] ({\D+0.3},0) -- ({\D+0.3},-0.6); \draw ({\D+0.5},-0.6) node[below] {$t_1$};
+        \draw[thin,dashed] ({\D+2.3},6) -- ({\D+2.3},0); \draw[thin] ({\D+2.3},0) -- ({\D+2.3},-0.6) node[below] {$t_2$};
+        \draw[thin,dashed] ({\D+5.3},6) -- ({\D+5.3},0); \draw[thin] ({\D+5.3},0) -- ({\D+5.3},-0.6) node[below] {$t_3$};
+        \draw[thin,dashed] ({\D+7},6) -- ({\D+7},0); \draw[thin] ({\D+7},0) -- ({\D+7},-0.6) node[below] {$T$};
+        \draw[ultra thick,yellow] ({\D+0},5) -- ({\D+0.3},5) -- ({\D+0.3},6) -- ({\D+7},6);
+        \draw[ultra thick,green] ({\D+0},3) -- ({\D+2.3},3) -- ({\D+2.3},4) -- ({\D+7},4);
+        \draw[ultra thick,red] ({\D+0},1) -- ({\D+5.3},1) -- ({\D+5.3},2) -- ({\D+7},2);
+\end{tikzpicture}
+\end{minipage}
+\end{tabular}
 \end{frame}
 
 \begin{frame}
